objects/Account_Subsidiary_Extension__c.object
<CustomObject>
    <description>Account Subsidiary Extension</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Subsidiary Extension</relationshipLabel>
        <relationshipName>Account_Subsidiary_Extension</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Credit_Limit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <label>ERP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Extend_to_Subsidiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extend to Subsidiary</label>
        <referenceTo>Subsidary__c</referenceTo>
        <relationshipLabel>Account Subsidiary Extension</relationshipLabel>
        <relationshipName>Account_Subsidiary_Extension</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Open Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overdue_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overdue Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paymnet_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Subsidiary Extension</label>
    <nameField>
        <displayFormat>ASE-{000000000}</displayFormat>
        <label>Account Subsidiary Extension #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Subsidiary Extension</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>